fix some spacing on home page, convert about page to contact page

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -17,3 +17,6 @@ $body-size: 20px
 
 .subtitle
   font-weight: 300
+
+.section
+  padding-bottom: 0
